ghost/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: ghost
  name: ghost
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ghost
    spec:
      containers:
      - image: ghost:latest
        imagePullPolicy: Always
        name: ghost
        resources:
          requests:
            memory: "512Mi"
          limits:
            memory: "1Gi"
        volumeMounts:
        - mountPath: /var/lib/ghost/content
          name: content
      restartPolicy: Always
      volumes:
      - name: content
        persistentVolumeClaim:
          claimName: ghost-content
status: {}
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    app: ghost-db
  name: ghost-db
spec:
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: ghost-db
    spec:
      containers:
      - env:
        - name: MYSQL_ROOT_PASSWORD
          value: mysql_rootpasswd
        image: mysql:5.7
        name: ghost-db
        resources: {}
        volumeMounts:
        - mountPath: /var/lib/mysql
          name: ghost-db
      restartPolicy: Always
      volumes:
      - name: ghost-db
        persistentVolumeClaim:
          claimName: ghost-db
status: {}
