ghost/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ghost
  name: ghost
spec:
  ports:
  - name: "2368"
    port: 2368
    targetPort: 2368
  selector:
    app: ghost
status:
  loadBalancer: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: ghost
  name: ghost-db
spec:
  ports:
  - name: "3306"
    port: 3306
    targetPort: 3306
  selector:
    app: ghost-db
status:
  loadBalancer: {}
