ghost/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ghost
  annotations:
    kubernetes.io/ingress.class: "nginx"
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/proxy-body-size: 100M
spec:
  rules:
  - host: test.sudojoss.com
    http:
      paths:
        - backend:
            serviceName: ghost
            servicePort: 2368
  tls: 
  - secretName: sudojoss-tls
    hosts:
    - test.sudojoss.com
